Issue #1443: Dark mode search field
Fixes: https://github.com/openmediavault/openmediavault/issues/1443

--- a/deb/openmediavault/workbench/src/app/shared/components/datatable/datatable.component.scss
+++ b/deb/openmediavault/workbench/src/app/shared/components/datatable/datatable.component.scss
@@ -5,21 +5,24 @@
 ::ng-deep omv-datatable .mat-toolbar {
   .mat-button,
   .mat-icon-button {
-    color: theme.$omv-color-primary;
+    color: var(--mat-primary-color-text);
   }
 
   .mat-form-field {
     font-size: var(--mat-font-size-body-1);
 
     &.mat-focused {
-      color: theme.$omv-color-primary;
+      .mat-form-field-ripple {
+        background-color: var(--mat-primary-color-text);
+      }
     }
 
     .mat-form-field-infix {
       padding-bottom: unset;
 
       .mat-input-element {
-        color: var(--mat-color-text);
+        caret-color: var(--mat-primary-color-text);
+        color: currentColor;
       }
     }
   }
