--- a/deb/openmediavault/workbench/src/scss/theme/material/_css-variables.scss
+++ b/deb/openmediavault/workbench/src/scss/theme/material/_css-variables.scss
@@ -50,6 +50,11 @@
         map-get($theme-config, background),
         card
       )};
+    --mat-primary-color-text:
+      #{mat.get-color-from-palette(
+        map-get($theme-config, primary),
+        text
+      )};
 
     ////////////////////////////////////////////////////////////////////////////////
     // Typography
